--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <header id="header">
+        <div class="topbar"">
+                <button type="button" id="rewards">Exciting updates to Starbucks&reg; Rewards &rsaquo;&rsaquo;</button> 
+        </div>
         <nav class="navbar">
             <ul class="list">
                 <li class="navlink"><a href="" class="link">COFFEE</a></li>
